--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
   
                       <div>
                         <a href="mailto:gadamsettykiran514@gmail.com"><h5 class = "mb-2">Email</h5>
-                     <p>gadamsettykiran514@gmail.com</p></a>
+                     <p>gadamsettykiran514@<br/>gmail.com</p></a>
                      
                       </div>
                       </div>
