--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light navbar-background fixed-top">
     <div class="container">
+      
       <a class="navbar-brand" href="#"><img src = "/assets/logo.png" /></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -28,7 +29,8 @@
           <a class="nav-link" href="#contact">Contact</a>
         </div>
       </div>
-    </div>
+  
+  </div>
   </nav>
       <div class = "banner-section">
         <div class = "d-flex flex-lg-row flex-column justify-content-between align-items-center">
@@ -57,21 +59,21 @@
               <div class = "box  p-3">
                 <img src = "/assets/settings.png"/>
                 <h2  data-aos="fade-up" data-aos-duration="1000">Deeper Skillset</h2>
-                <p>Kobita tumi sopno charini hodsye ersest labo met, consectetur addsipi ctetur adipisicing eod tempor</p>
+                <p>I have a versatile command of web technologies, turning complex ideas into seamless digital solutions.</p>
             </div>
           </div>
             <div class = "col-12 col-lg-3">
               <div class = "box  p-3">
                 <img src = "/assets/folder.png"/>
                 <h2  data-aos="fade-down" data-aos-duration="1000">Creative Work</h2>
-                <p>Kobita tumi sopno charini hodsye ersest labo met, consectetur addsipi ctetur adipisicing eod tempor</p>
+                <p>My work merges creativity with functionality, delivering designs that captivate and perform.</p>
             </div>
             </div>
             <div class = "col-12 col-lg-3">
               <div class = "box  p-3">
                 <img src = "/assets/game.png"/>
                 <h2 data-aos="fade-up" data-aos-duration="1000">Strong Dedication</h2>
-                <p>Kobita tumi sopno charini hodsye ersest labo met, consectetur addsipi ctetur adipisicing eod tempor</p>
+                <p>I am deeply committed to delivering high-quality code and consistently exceeding project expectations.</p>
             </div>
             </div>
         </div>
@@ -84,7 +86,7 @@
             <div class = "row justify-content-center">
                 <div class = "col-12 col-lg-6 order-1">
                     <h5>About Me</h5>
-                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occae cat cupidatat non proident, sunt in culpa qui officia dese runt mollit anim id est laborum velit esse cillum dolore eu fugiat.</p>
+                    <p>I am a passionate web developer with a keen eye for detail and a love for crafting efficient, user-focused websites. Constantly learning and evolving, I thrive on turning complex challenges into clean, elegant solutions.</p>
                   <div class = "d-none d-lg-block">
                     <div class = "d-flex justify-content-around table">
 
@@ -209,7 +211,7 @@
         <div class = "resume-section pt-5 pb-5 padding">
             <div class = "container">
                 <h3 data-aos="fade-up" data-aos-duration="1000">Resume</h3>
-                <h4 data-aos="fade-down" data-aos-duration="1000" class = "mb-5">I Worked for Some  Big Companies</h4>
+                <h4 data-aos="fade-down" data-aos-duration="1000" class = "mb-5">I Worked for Some Companies</h4>
                 <div class = "row">
                  <div class = "col-12 col-lg-6 order-1">
                     <h5 class = "mb-5 mt-5 mt-lg-0" data-aos="fade-down" data-aos-duration="1000">Education</h5>
