--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
             <h3 data-aos="fade-up" data-aos-duration="1000">About Me</h3>
             <h4 data-aos="fade-down" data-aos-duration="1000" class = "mb-5">A Passionate Developer Who Loves to Code</h4>
             <div class = "row justify-content-center">
-                <div class = "col-12 col-lg-6 order-1">
+                <div class = "col-12 col-xl-6 order-1">
                     <h5>About Me</h5>
                     <p>I am a passionate web developer with a keen eye for detail and a love for crafting efficient, user-focused websites. Constantly learning and evolving, I thrive on turning complex challenges into clean, elegant solutions.</p>
-                  <div class = "d-none d-lg-block">
+                  <div class = "d-none d-xl-block">
                     <div class = "d-flex justify-content-around table">
 
                         <div class = "col-6 first-col pt-4">
@@ -109,9 +109,9 @@
                         </div>
                     </div>
 </div>
-                  <button class = "mt-3">Download CV</button>
+                  <a target="_blank" rel="noopener noreferrer" href = "https://docs.google.com/document/d/1y_hxRjqVzPBGL5mAOZ-fNEs7PnPRcFeD/edit?usp=sharing&ouid=111160508423697891801&rtpof=true&sd=true" download><button class = "mt-3">Download CV</button></a>
                 </div>
-                <div class = "col-12 col-lg-3 text-center about-image order-0">
+                <div class = "col-12 col-xl-3 text-center about-image order-0">
                     
                     <img src = "/assets/profile.jpg"/>
                 </div>
@@ -313,7 +313,7 @@
               <h3 data-aos="fade-up" data-aos-duration="1000">Contact</h3>
               <h4 data-aos="fade-down" data-aos-duration="1000" class = "mb-4">I Want to Hear from You</h4>
               <div class = "row">
-                <div class = "col-12 col-lg-6 mt-4 mt-lg-0">
+                <div class = "col-12 col-lg-4 mt-4 mt-lg-0">
 
                   <div class = "d-flex">
 
@@ -353,7 +353,7 @@
                         </div>
                </div>
 
-               <div class = "col-12 col-lg-6 mt-4 mt-lg-0">
+               <div class = "col-12 col-lg-8 mt-4 mt-lg-0">
                 <form>
                   <div class = "d-flex justify-content-between gap-3">
                  
