--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav m-auto">
+        <div class="navbar-nav m-auto p-2">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
           <a class="nav-link" href="#about">About</a>
           <a class="nav-link" href="#skills">Skills</a>
