--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                            <p class = "email" data-aos="fade-up" data-aos-duration="1000"><a href="tel:+917075649727">+91 7075649727</a></p>
                         </div>
                         
-                        <div class = "col-6 pt-4">
+                        <div class = "col-6 pt-4 second-col">
                             <h6>Address</h6>
                             <p >Hyderabad</p>
                             <h6>Degree</h6>
@@ -122,19 +122,19 @@
     <div class = "experience-bottom-section pt-5 pb-5 padding">
         <div class = "container">
           <div class  = "row justify-content-center">
-              <div class = "col-8 col-lg-2">
+              <div class = "col-8 col-lg-6 col-xl-2">
                 <div class = "d-flex flex-column justify-content-center align-items-center  box p-2 pt-4">
                 <h2 id = "total-projects"></h2>
                 <p>Total Projects</p>
             </div>
                       </div>
-              <div class = "col-8 col-lg-2">
+              <div class = "col-8 col-lg-6 col-xl-2">
                 <div class = "d-flex flex-column justify-content-center align-items-center  box p-2 pt-4">
                     <h2 id = "total-experience"></h2>
-                    <p>Year's Experience</p>
+                    <p>Year Experience</p>
                 </div>
                  </div>
-              <div class = "col-8 col-lg-2">
+              <div class = "col-8 col-lg-6 col-xl-2">
                 <div class = "d-flex flex-column justify-content-center align-items-center  box p-2 pt-4">
                 <h2 id = "total-coding">1000+</h2>
                     <p>Coding Hour's</p>
