--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Welcome to Kiran's Portfolio, Crafting Innovation & Creativity">
 <meta property="og:description" content="Showcasing my journey, skills, and projects explore my portfolio and connect with me!">
-<meta property="og:image" content="/assets/website-screenshot.png">
+<meta property="og:image" content="/assets/website-screenshot.jpeg">
 <meta property="og:url" content="https://portfolio-new-2024.netlify.app/">
 <meta property="og:type" content="website">
     <title>Personal Portfolio</title>
