--- a/index.html
+++ b/index.html
@@ -394,11 +394,11 @@
               </div>
           </div>
       </div>
-      <script src="https://smtpjs.com/v3/smtp.js">
-        
-      </script>
+      <script src="https://smtpjs.com/v3/smtp.js"></script>
        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src  = "index.js"></script>
+<script src = "typewrite.js"></script>
+<script src = "email.js"></script>
 </body>
 </html>
 
