--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                </div>
 
                <div class = "col-12 col-lg-8 mt-4 mt-lg-0">
-                <form>
+                <form  action="91b928be-706d-4f97-89ed-dd88fe0de464" method="POST">
                   <div class = "d-flex justify-content-between gap-3">
                  
                     <input id = "name" type = "text" name = "Name" required placeholder = "Your Name"/>
@@ -394,11 +394,8 @@
               </div>
           </div>
       </div>
-      <script src="https://smtpjs.com/v3/smtp.js"></script>
-       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src  = "index.js"></script>
 <script src = "typewrite.js"></script>
-<script src = "email.js"></script>
 </body>
 </html>
 
