--- a/index.html
+++ b/index.html
@@ -398,6 +398,7 @@
        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src  = "index.js"></script>
 <script src = "typewrite.js"></script>
+<script src = "email.js"></script>
 </body>
 </html>
 
